# ThaiTour

./: .env.example  .gitignore  JENKINSFILE1  README.md  REGISTRATION_LOGIN_GUIDE.md  pyproject.toml  thaitour.db
scripts/: init_db.py  migrate_add_user_id.py  run-api-dev
tests/: test_province.py  test_registration.py  test_tax.py
thaitour/: __init__.py  main.py
thaitour/core/: config.py  deps.py  security.py
thaitour/models/: __init__.py  province_model.py  registration_model.py  tax_model.py  user_model.py
thaitour/routers/: __init__.py
thaitour/routers/v1/: __init__.py  authentication_router.py  province_router.py  registration_router.py  tax_router.py
thaitour/schemas/: province_schema.py  registration_schema.py  tax_schema.py
