[project]
name = "thaitour"
version = "0.1.0"
description = ""
authors = [
    {name = "Pakkaphoom Jindadech",email = "pakkaphoom.pooh123@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
