[project]
name = "thaitour"
version = "0.1.0"
description = ""
authors = [
    {name = "Pakkaphoom Jindadech",email = "pakkaphoom.pooh123@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)", 
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)",
    "sqlmodel (>=0.0.24,<0.1.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
